tests/compile_fail/may_dangle/mut_bump_vec.stderr
error[E0597]: `s` does not live long enough
  --> tests/compile_fail/may_dangle/mut_bump_vec.rs:22:24
   |
21 |     let s = String::from("hello");
   |         - binding `s` declared here
22 |     v.push(PrintOnDrop(&s));
   |                        ^^ borrowed value does not live long enough
23 | }
   | -
   | |
   | `s` dropped here while still borrowed
   | borrow might be used here, when `v` is dropped and runs the destructor for type `MutBumpVec<PrintOnDrop<&String>, &mut Bump>`
   |
   = note: values in a scope are dropped in the opposite order they are defined
